syntax = "proto3";

service MgrManager {
}
